[package]
name = "musl_libc_top_half"
version = "0.1.0"
edition = "2024"
description = "Rust FFI bindings and compiled library for the top half of musl libc targeting WASI (WebAssembly System Interface)"
license = "MIT"
keywords = ["wasm32", "musl", "libc", "webassembly", "ffi"]
categories = ["external-ffi-bindings", "wasm"]
repository = "https://github.com/Indra-db/Flecs-Rust"

[dependencies]


[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.35"

[features]
default = []
# Regenerate the C bindings for musl libc top half (for maintainers)
bindgen = []
# Build musl_top_half_libc.a from the libc-top-half sources
build-libc = []
# Link with the pre-compiled musl_top_half_libc.a (for end users)
link-libc = []
