[package]
name = "musl_libc_top_half"
version = "0.1.0"
edition = "2024"
description = "This library provides a generated definitions and a compiled libc.a of the top half of musl libc targeting wasm32-unknown-unknown. This is experimental. Please provide PR's for fixes or improvements"
license = "MIT"
keywords = ["wasm32", "musl", "libc", "webassembly", "ffi"]
categories = ["external-ffi-bindings", "wasm"]
repository = "https://github.com/Indra-db/Flecs-Rust"

[dependencies]


[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.35"

[features]
default = ["link-libc"]
# Regenerate the C bindings for musl libc top half (for maintainers)
bindgen = []
# Build musl_libc_top_half.a from the libc-top-half sources
build-libc = []
# Link with the pre-compiled musl_libc_top_half.a (for end users)
link-libc = []
