[package]
name = "wasm32-musl-libc"
version = "0.1.0"
edition = "2024"
description = "Provides FFI bindings and compiled musl libc implementations for Rust libraries that need to link with C code when targeting wasm32-unknown-unknown."
license = "MIT"
keywords = ["wasm32", "musl", "libc", "webassembly", "ffi"]
categories = ["external-ffi-bindings", "wasm"]
repository = "https://github.com/Indra-db/Flecs-Rust"

[dependencies]


[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.35"
build-print = "1.0.1"

[features]
default = ["link-libc"]
# Regenerate the C bindings for musl libc top half (for maintainers)
bindgen = []
# Build libwasm32_musl_libc.a from the libc-top-half sources
build-libc = []
# Link with the pre-compiled libwasm32_musl_libc.a (for end users)
link-libc = []
