[package]
name = "buildtest_flecs_doc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
flecs_ecs = { path = "../../flecs_ecs", default-features = false, features = ["flecs_doc", "flecs_regenerate_binding_c", "std"] }
