[package]
name = "flecs_test_wasm"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Use the local flecs_ecs crate from the workspace
flecs_ecs = { path = "../../flecs_ecs", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = "26.0.1"
bytemuck = { version = "1.14", features = ["derive"] }
raw-window-handle = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Window",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Element",
  "HtmlElement",
  "CssStyleDeclaration",
]

[features]
# Keep this crate lean; opt-in to features explicitly
default = [
    "flecs_base",
]
# Forward these features to flecs_ecs
wasm32 = ["flecs_ecs/wasm32"]
flecs_base = ["flecs_ecs/flecs_base"]
flecs_meta = ["flecs_ecs/flecs_meta"]
flecs_use_os_alloc = ["flecs_ecs/flecs_use_os_alloc"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"