[package]
name = "test_wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = "26.0.1"
winit = "0.30"
pollster = "0.4.0"
raw-window-handle = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm32-musl-libc = { path = "../../wasm32-musl-libc" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2.175"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Window",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
]

[lints]
workspace = true
