[package]
name = "poly_doctest"
version = "0.1.0"
edition = "2024"
description = "Polyglot documentation snippet test generator - extract code snippets from docs and generate tests"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Indra-db/Flecs-Rust"
keywords = ["documentation", "testing", "code-generation", "snippets"]
categories = ["development-tools", "testing"]

[lib]
name = "poly_doctest"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "2.0.16"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.11.2"
pulldown-cmark = { version = "0.10", default-features = false, features = ["simd"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "json"] }
url = "2.5.7"
urlencoding = "2.1.3"
walkdir = "2.5.0"
path-absolutize = "3.1.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
indenter = "0.3.4"
aho-corasick = "1.1.3"

[dev-dependencies]
rstest = "0.26.1"
pretty_assertions = "1.4.1"
tempfile = "3.22.0"
assert_fs = "1.1.3"
predicates = "3.1.3"