[package]
name = "flecs_bindgen_minimal"
version = "0.1.0"
edition = "2021"

[workspace]
# This package is standalone, not part of the workspace

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = []

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
